problem 5: create a crude operations for tasks

--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
     "name": "tranminhtoan",
     "version": "1.0.0",
     "scripts": {
-        "test:problem4": "ts-node src/problem4/index.ts"
+        "test:problem4": "ts-node src/problem4/index.ts",
+        "start": "ts-node src/problem5/server.ts --watch"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@types/express": "^5.0.0",
         "@types/node": "^22.13.10",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.2"
+    },
+    "dependencies": {
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "pg": "^8.14.0",
+        "reflect-metadata": "^0.2.2",
+        "typeorm": "^0.3.21"
     }
 }
